@@ -119,6 +119,14 @@ Set to C<awesome> to use the L<Dist::Zilla::Plugin::MakeMaker::Awesome> plugin
 instead of the basic C<MakeMaker> plugin. Options for C<MakeMaker::Awesome> can
 then be specified with the prefix C<mma_>.
 
+=head2 pod_tests
+
+ pod_tests = 1
+
+Set to a true value to add L<Dist::Zilla::Plugin::PodSyntaxTests> and
+L<Dist::Zilla::Plugin::PodCoverageTests>. Set to C<syntax> to only add the
+syntax tests.
+
 =head1 BUGS
 
 Report any issues on the public bugtracker.
