@@ -5,6 +5,7 @@ copyright_holder = Dan Book
 copyright_year   = 2015
 
 [@Author::DBOOK]
+pod_tests = syntax
 
 [ModuleShareDirs]
 Dist::Zilla::MintingProfile::Author::DBOOK = profiles
