@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - add pod_tests option to use PodSyntaxTests and PodCoverageTests
 
 0.008     2015-08-10 13:32:38 EDT
   - add minting profile
